Done html structure

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="webapp">
+        <!-- MAIN -->
+        <main>
+        <!-- Sezione SIDEBAR -->
+        <section class="side-bar">
+
+        </section>
+        <!-- /Sezione SIDEBAR -->
+
+
+        </main>
+        <!-- /MAIN -->
+        <!-- FOOTER -->
+        <footer>
+
+        </footer>
+        <!-- /FOOTER -->
+
+    </div>
 </body>
 </html>
