--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="webapp">
-        <!-- MAIN -->
-        <main>
-        <!-- Sezione SIDEBAR -->
-        <section class="side-bar">
 
-        </section>
-        <!-- /Sezione SIDEBAR -->
+    <!-- Sezione SIDEBAR -->
+    <section class="side-bar">
+
+    </section>
+    <!-- /Sezione SIDEBAR -->
+
+    <!-- MAIN -->
+    <main class="webapp-container">
 
 
-        </main>
-        <!-- /MAIN -->
-        <!-- FOOTER -->
-        <footer>
+    </main>
+    <!-- /MAIN -->
+    
+    <!-- FOOTER -->
+    <footer>
 
-        </footer>
-        <!-- /FOOTER -->
+    </footer>
+    <!-- /FOOTER -->
 
-    </div>
 </body>
 </html>
