Done recently section, working on suggests section structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main class="flex-container">
         <!-- Sezione SIDEBAR -->
             <section class="sidebar-section">
-                <img src="img/logo.svg" alt="">
+                <img id="logo" src="img/logo.svg" alt="">
                 <nav class="sidebar-nav">
                     <ul>
                         <li>
@@ -59,16 +59,88 @@
                 <div class="install-and-profile">
                     <img src="img/download.svg" alt="">
                     <span>Installa app</span>
-                    <hr>
-                    <img src="img/profile.svg" alt="">
-                    <h3>John Doe</h3>
+                    <div class="profile">
+                        <img src="img/profile.svg" alt="">
+                        <h4 class="profile-name">John Doe</h4>
+                    </div>
                 </div>
             </section>
         <!-- /Sezione SIDEBAR -->
             <section class="main-section">
-
+                <!-- Main Head -->
+                <div class="main-head">
+                    <a href="">EFFETTUA L'UPGRADE</a>
+                </div>
+                <nav class="main-section-nav">
+                    <ul>
+                        <li>IN EVIDENZA</li>
+                        <li>PODCAST</li>
+                        <li>CLASSIFICHE</li>
+                        <li>GENERI E MOOD</li>
+                        <li>NUOVE USCITE</li>
+                        <li>SCOPRI</li>
+                    </ul>
+                </nav>
+                <div class="recently-section">
+                    <h1 class="category-title">Recently Played</h1>
+                    <div class="row">
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                                <p class="song-subtitle">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                                <p class="song-subtitle">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                                <p class="song-subtitle">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                                <p class="song-subtitle">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                                <p class="song-subtitle">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                                <p class="song-subtitle">Subtitle</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
-            
         </main>
         <!-- /MAIN -->
         
