Fixed general structure

--- a/index.html
+++ b/index.html
@@ -135,7 +135,51 @@
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">Heavy Metal</h3>
-                                <p class="song-subtitle">Subtitle</p>
+                                <p class="subtitle">Subtitle</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="for-you-section">
+                    <h1 class="category-title">Creato per John Doe</h1>
+                    <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
+                    <div class="row">
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/metal_lifting.jpg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="popular-artists">
+                    <h1>Artisti più popolari</h1>
+                    <p>Ascolta per avere più suggerimenti</p>
+                    <div class="row">
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/youg.jpeg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/einaudi.jpeg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">Heavy Metal</h3>
                             </div>
                         </div>
                     </div>
@@ -146,7 +190,32 @@
         
         <!-- FOOTER -->
         <footer>
+            <div class="current-song flex-container">
+                <img src="img/sinister.jpeg" alt="">
+                <div class="song-details">
+                    <h4>Sinister</h4>
+                    <p class="title">Brano Nome</p>
+                </div>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-folder"></i>
+            </div>
+            <div class="footer-main">
+                <div class="song-icons">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+                <div class="song-length">
+                    <span>0.25</span>
+                    
+                    <span>4:35</span>
+                </div>
+            </div>
+            <div class="volume">
 
+            </div>
         </footer>
         <!-- /FOOTER -->
     </div>
