Working on responsiveness

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <i class="fa-regular fa-folder"></i>
             </div>
             <div class="footer-main">
-                <div class="song-icons">
+                <div class="player">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
                     <i class="fa-regular fa-circle-play"></i>
@@ -213,8 +213,10 @@
                     <span>4:35</span>
                 </div>
             </div>
-            <div class="volume">
-
+            <div class="audio-settings">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
             </div>
         </footer>
         <!-- /FOOTER -->
