working on main content details

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </ul>
                 </nav>
                 <nav class="playlist-nav">
-                    <h2 class="playlist-title">Playlist</h2>
+                    <h2 class="playlist-title">PLAYLIST</h2>
                     <div class="new-playlist">
                         <div class="square">
                             <i class="fa-solid fa-plus"></i>
@@ -60,8 +60,19 @@
                     <img src="img/download.svg" alt="">
                     <span>Installa app</span>
                     <div class="profile">
-                        <img src="img/profile.svg" alt="">
+                        <div class="profile-pic">
+                            <img src="img/profile.svg" alt="">
+                        </div>
                         <h4 class="profile-name">John Doe</h4>
+                    </div>
+                </div>
+                <div class="sidebar-mobile">
+                    <div class="icons-1">
+                        <img src="img/logo-small.svg" alt="">
+                        <img src="img/home.svg" alt="">
+                    </div>
+                    <div class="icons-2">
+                        <img src="img/profile.svg" alt="">
                     </div>
                 </div>
             </section>
@@ -69,7 +80,7 @@
             <section class="main-section">
                 <!-- Main Head -->
                 <div class="main-head">
-                    <a href="">EFFETTUA L'UPGRADE</a>
+                    <a class="btn" href="">EFFETTUA L'UPGRADE</a>
                 </div>
                 <nav class="main-section-nav">
                     <ul>
@@ -199,8 +210,8 @@
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-regular fa-folder"></i>
             </div>
-            <div class="footer-main">
-                <div class="player">
+            <div class="player">
+                <div class="song-icons">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
                     <i class="fa-regular fa-circle-play"></i>
