Working on footer details and responsiveness

--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
                 </div>
                 <div class="sidebar-mobile">
                     <div class="icons-1">
-                        <img src="img/logo-small.svg" alt="">
+                        <img id="logo-small" src="img/logo-small.svg" alt="">
                         <img src="img/home.svg" alt="">
+                        <img src="img/search.svg" alt="">
+                        <img src="img/libreria.svg" alt="">
                     </div>
                     <div class="icons-2">
+                        <img src="img/download.svg" alt="">
                         <img src="img/profile.svg" alt="">
                     </div>
                 </div>
@@ -106,46 +109,46 @@
                         </div>
                         <div class="cards">
                             <div class="img-content">
-                                <img src="img/metal_lifting.jpg" alt="">
+                                <img src="img/stranger.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                                <p class="song-subtitle">Kyle Dixon & Michael Stein</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="img-content">
+                                <img src="img/aquietplace.jpeg" alt="">
+                            </div>
+                            <div class="text-content">
+                                <h3 class="song-title">A quiet place</h3>
                                 <p class="song-subtitle">Subtitle</p>
                             </div>
                         </div>
                         <div class="cards">
                             <div class="img-content">
-                                <img src="img/metal_lifting.jpg" alt="">
+                                <img src="img/split.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">Split</h3>
                                 <p class="song-subtitle">Subtitle</p>
                             </div>
                         </div>
                         <div class="cards">
                             <div class="img-content">
-                                <img src="img/metal_lifting.jpg" alt="">
+                                <img src="img/cure.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">A cure for wellness</h3>
                                 <p class="song-subtitle">Subtitle</p>
                             </div>
                         </div>
                         <div class="cards">
                             <div class="img-content">
-                                <img src="img/metal_lifting.jpg" alt="">
+                                <img src="img/sinister.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
-                                <p class="song-subtitle">Subtitle</p>
-                            </div>
-                        </div>
-                        <div class="cards">
-                            <div class="img-content">
-                                <img src="img/metal_lifting.jpg" alt="">
-                            </div>
-                            <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">Sinister</h3>
                                 <p class="subtitle">Subtitle</p>
                             </div>
                         </div>
@@ -153,36 +156,36 @@
                 </div>
                 <div class="for-you-section">
                     <h1 class="category-title">Creato per John Doe</h1>
-                    <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
+                    <p class="song-subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
                     <div class="row">
                         <div class="cards">
                             <div class="img-content">
-                                <img src="img/metal_lifting.jpg" alt="">
+                                <img src="img/radar.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">Release Radar</h3>
                             </div>
                         </div>
                         <div class="cards">
                             <div class="img-content">
-                                <img src="img/metal_lifting.jpg" alt="">
+                                <img src="img/mixdaily.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">Daily Mix 1</h3>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="popular-artists">
-                    <h1>Artisti più popolari</h1>
-                    <p>Ascolta per avere più suggerimenti</p>
+                    <h1 class="category-title">Artisti più popolari</h1>
+                    <p class="song-subtitle">Ascolta per avere più suggerimenti</p>
                     <div class="row">
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/youg.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">Lana del Rey</h3>
                             </div>
                         </div>
                         <div class="cards">
@@ -190,7 +193,7 @@
                                 <img src="img/einaudi.jpeg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3 class="song-title">Heavy Metal</h3>
+                                <h3 class="song-title">Non lo so</h3>
                             </div>
                         </div>
                     </div>
