working on hover effects

--- a/index.html
+++ b/index.html
@@ -207,30 +207,35 @@
             <div class="current-song flex-container">
                 <img src="img/sinister.jpeg" alt="">
                 <div class="song-details">
-                    <h4>Sinister</h4>
+                    <h4 class="singer">Sinister</h4>
                     <p class="title">Brano Nome</p>
                 </div>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-folder"></i>
+                <i class="fa-regular fa-heart icon-small"></i>
+                <i class="fa-regular fa-folder icon-small"></i>
             </div>
             <div class="player">
                 <div class="song-icons">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-regular fa-circle-play icon-big"></i>
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-rotate-right"></i>
                 </div>
                 <div class="song-length">
                     <span>0.25</span>
-                    
+                    <div class="current-length large-length">
+                        <div class="left-length"></div>
+                    </div>
                     <span>4:35</span>
                 </div>
             </div>
             <div class="audio-settings">
-                <i class="fa-solid fa-bars"></i>
-                <i class="fa-solid fa-desktop"></i>
-                <i class="fa-solid fa-volume-high"></i>
+                <i class="fa-solid fa-bars icon-small"></i>
+                <i class="fa-solid fa-desktop icon-small"></i>
+                <i class="fa-solid fa-volume-high icon-small"></i>
+                <div class="current-length small-length">
+                    <div class="left-length"></div>
+                </div>
             </div>
         </footer>
         <!-- /FOOTER -->
