Added hover and animations

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/metal_lifting.jpg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">Heavy Metal</h3>
@@ -110,6 +111,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/stranger.jpeg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
@@ -119,6 +121,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/aquietplace.jpeg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">A quiet place</h3>
@@ -128,6 +131,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/split.jpeg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">Split</h3>
@@ -137,6 +141,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/cure.jpeg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">A cure for wellness</h3>
@@ -146,6 +151,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/sinister.jpeg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">Sinister</h3>
@@ -161,6 +167,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/radar.jpeg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">Release Radar</h3>
@@ -169,6 +176,7 @@
                         <div class="cards">
                             <div class="img-content">
                                 <img src="img/mixdaily.jpeg" alt="">
+                                <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
                             <div class="text-content">
                                 <h3 class="song-title">Daily Mix 1</h3>
